# lmbot

./: .gitignore  CMakeLists.txt  LICENSE  MAP_UPDATE_KIND.h  README.md  bank.h  build.bat  build.sh  command.h  config.cfg  des.h  items.h  ll.txt  lm.bash  main.cpp  main.txt  map_point.h  net_rw.h  packet.hpp  packet_map.h  packet_type.hpp
.github/workflows/: cmake-multi-platform.yml
1.0.0/: CMakeLists.txt
1.0.0/include/: config.h  connection.h  log.h  map_point.h  packet_map.h  protocol.h  tech_research.h  version.h
1.0.0/src/: command.c  config.c  connection.c  des.c  log.c  main.c  protocol.c
1.0.0/src/protocol/: login.c
docs/: configuration.md
include/: MAP_UPDATE_KIND.h  account.h  bank.h  command.h  config.h  connection.h  des.h  items.h  net_rw.h  packet_enum.h  protocol.h  version.h
src/: account.c  bank.c  command.c  config.c  connection.c  log.c  main.c  map_point.c  protocol.c
